@@ -1,5 +1,5 @@
 /*
- * Copyright 2007 Sun Microsystems, Inc.
+ * Copyright 2007-2008 Sun Microsystems, Inc.
  *
  * This file is part of Project Darkstar Server.
  *
@@ -19,19 +19,20 @@
 
 package com.sun.sgs.impl.profile.listener;
 
+import com.sun.sgs.auth.Identity;
+
 import com.sun.sgs.impl.sharedutil.LoggerWrapper;
 import com.sun.sgs.impl.sharedutil.PropertiesWrapper;
 
-import com.sun.sgs.kernel.ResourceCoordinator;
-import com.sun.sgs.kernel.TaskOwner;
-import com.sun.sgs.kernel.TaskScheduler;
+import com.sun.sgs.kernel.ComponentRegistry;
 
-import com.sun.sgs.profile.ProfileOperation;
 import com.sun.sgs.profile.ProfileListener;
+import com.sun.sgs.profile.ProfileOperation;
 import com.sun.sgs.profile.ProfileReport;
 
 import java.beans.PropertyChangeEvent;
 
+import java.util.Formatter;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -50,10 +51,10 @@ import java.util.logging.Logger;
  * <p>
  * This listener logs its findings at level <code>FINE</code> to the
  * logger named <code>
- * com.sun.sgs.impl.kernel.profile.OperationLoggingProfileOpListener</code>.
+ * com.sun.sgs.impl.profile.listener.OperationLoggingProfileOpListener</code>.
  * <p>
  * The <code>
- * com.sun.sgs.impl.kernel.profile.OperationLoggingProfileOpListener.logOps
+ * com.sun.sgs.impl.profile.listener.OperationLoggingProfileOpListener.logOps
  * </code> property may be used to set the interval between reports.
  */
 public class OperationLoggingProfileOpListener implements ProfileListener {
@@ -98,17 +99,14 @@ public class OperationLoggingProfileOpListener implements ProfileListener {
      * Creates an instance of <code>OperationLoggingProfileOpListener</code>.
      *
      * @param properties the <code>Properties</code> for this listener
-     * @param owner the <code>TaskOwner</code> to use for all tasks run by
+     * @param owner the <code>Identity</code> to use for all tasks run by
      *              this listener
-     * @param taskScheduler the <code>TaskScheduler</code> to use for
-     *                      running short-lived or recurring tasks
-     * @param resourceCoord the <code>ResourceCoordinator</code> used to
-     *                      run any long-lived tasks
+     * @param registry the {@code ComponentRegistry} containing the
+     *        available system components
      */
     public OperationLoggingProfileOpListener(Properties properties,
-                                             TaskOwner owner,
-                                             TaskScheduler taskScheduler,
-                                             ResourceCoordinator resourceCoord)
+                                             Identity owner,
+                                             ComponentRegistry registry)
     {
         logOps = (new PropertiesWrapper(properties)).
             getIntProperty(LOG_OPS_PROPERTY, DEFAULT_LOG_OPS);
@@ -142,8 +140,7 @@ public class OperationLoggingProfileOpListener implements ProfileListener {
 
         for (ProfileOperation op : profileReport.getReportedOperations()) {
 	    Long i = opCounts.get(op.getId());
-	    opCounts.put(op.getId(), (i == null)
-			 ? new Long(1) : i.longValue() + 1);	    
+	    opCounts.put(op.getId(), Long.valueOf(i == null ? 1 : i + 1));
 	}
 
 	Map<String,Long> counterMap = profileReport.getUpdatedTaskCounters();
@@ -160,30 +157,33 @@ public class OperationLoggingProfileOpListener implements ProfileListener {
         if ((commitCount + abortCount) >= logOps) {
             if (logger.isLoggable(Level.FINE)) {
                 long now = System.currentTimeMillis();
-                String opCountTally = "";
+                Formatter opCountTally = new Formatter();
                 for (int i = 0; i <= maxOp; i++) {
                     if (i != 0)
-                        opCountTally += "\n";
-                    opCountTally += "  " + registeredOps.get(i) + ": " +
-                        opCounts.get(i);
+                        opCountTally.format("%n");
+		    Long count = opCounts.get(i);
+                    opCountTally.format(
+			"  %s: %d", registeredOps.get(i),
+			(count == null) ? 0 : count.longValue());
                     opCounts.put(i,0L);
                 }
 
-		String counterTally = "";
+		Formatter counterTally = new Formatter();
 		if (! localCounters.isEmpty()) {
-		    counterTally += "[task counters]\n";
+		    counterTally.format("[task counters]%n");
 		    for (Entry<String,Long> entry : localCounters.entrySet())
-			counterTally += "  " + entry.getKey() + ": " +
-			    entry.getValue() + "\n";
+			counterTally.format(
+			    "  %s: %d%n", entry.getKey(), entry.getValue());
 		}
 
                 logger.log(Level.FINE, "Operations [logOps=" + logOps +"]:\n" +
                            "  succeeded: " + commitCount +
-                           "  failed:" + abortCount + "\n" +
+                           "  failed: " + abortCount + "\n" +
                            "  elapsed time: " + (now - lastReport) + " ms\n" +
                            "  running time: " + totalRunningTime + " ms " +
-                           "[threads=" + threadCount + "]\n" + opCountTally +
-			   "\n" + counterTally);
+                           "[threads=" + threadCount + "]\n" +
+			   opCountTally.toString() + "\n" +
+			   counterTally.toString());
             } else {
                 for (int i = 0; i <= maxOp; i++)
                     opCounts.put(i,0L);
