@@ -1,5 +1,5 @@
 /*
- * Copyright 2007 Sun Microsystems, Inc.
+ * Copyright 2007-2008 Sun Microsystems, Inc.
  *
  * This file is part of Project Darkstar Server.
  *
@@ -15,30 +15,30 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */ 
+ */
 
 package com.sun.sgs.impl.profile.listener;
 
-import com.sun.sgs.impl.sharedutil.PropertiesWrapper;
+import com.sun.sgs.auth.Identity;
 
 import com.sun.sgs.impl.profile.util.NetworkReporter;
 
+import com.sun.sgs.impl.sharedutil.PropertiesWrapper;
+
+import com.sun.sgs.kernel.ComponentRegistry;
 import com.sun.sgs.kernel.KernelRunnable;
 import com.sun.sgs.kernel.RecurringTaskHandle;
-import com.sun.sgs.kernel.ResourceCoordinator;
-import com.sun.sgs.kernel.TaskOwner;
 import com.sun.sgs.kernel.TaskScheduler;
 
-import com.sun.sgs.profile.ProfileOperation;
 import com.sun.sgs.profile.ProfileListener;
+import com.sun.sgs.profile.ProfileOperation;
 import com.sun.sgs.profile.ProfileReport;
 
 import java.beans.PropertyChangeEvent;
 
 import java.io.IOException;
 
-import java.text.DecimalFormat;
-
+import java.util.Formatter;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -56,9 +56,9 @@ import java.util.Properties;
  * port used is 43010.
  * <p>
  * The <code>com.sun.sgs.impl.profile.listener.SnapshotTaskListener.</code>
- * root is used for all properties in this class. The <code>reportPort</code>
+ * root is used for all properties in this class. The <code>report.port</code>
  * key is used to specify an alternate port on which to report profiling
- * data. The <code>reportPeriod</code> key is used to specify the length of
+ * data. The <code>report.period</code> key is used to specify the length of
  * time, in milliseconds, between reports.
  */
 public class SnapshotTaskListener implements ProfileListener {
@@ -81,27 +81,20 @@ public class SnapshotTaskListener implements ProfileListener {
 
     private HashMap<String,TaskDetail> map;
 
-    static final DecimalFormat df = new DecimalFormat();
-    static {
-        df.setMaximumFractionDigits(2);
-        df.setMinimumFractionDigits(2);
-    }
-
     /**
      * Creates an instance of {@code RuntimeHistogramListener}.
      *
      * @param properties the {@code Properties} for this listener
-     * @param owner the {@code TaskOwner} to use for all tasks run by
+     * @param owner the {@code Identity} to use for all tasks run by
      *        this listener
-     * @param taskScheduler the {@code TaskScheduler} to use for
-     *        running short-lived or recurring tasks
-     * @param resourceCoord the {@code ResourceCoordinator} used to
-     *        run any long-lived tasks
-     *
+     * @param registry the {@code ComponentRegistry} containing the
+     *        available system components
+     * @throws IOException if the server socket cannot be created
+     * @throws IOException if the socket where data will be published 
+     *                     cannot be created
      */
-    public SnapshotTaskListener(Properties properties, TaskOwner owner,
-                                TaskScheduler taskScheduler,
-                                ResourceCoordinator resourceCoord)
+    public SnapshotTaskListener(Properties properties, Identity owner,
+                                ComponentRegistry registry)
         throws IOException
     {
         PropertiesWrapper wrappedProps = new PropertiesWrapper(properties);
@@ -109,11 +102,11 @@ public class SnapshotTaskListener implements ProfileListener {
         map = new HashMap<String,TaskDetail>();
 
         int port = wrappedProps.getIntProperty(PORT_PROPERTY, DEFAULT_PORT);
-        networkReporter = new NetworkReporter(port, resourceCoord);
+        networkReporter = new NetworkReporter(port);
 
         long reportPeriod =
             wrappedProps.getLongProperty(PERIOD_PROPERTY, DEFAULT_PERIOD);
-        handle = taskScheduler.
+        handle = registry.getComponent(TaskScheduler.class).
             scheduleRecurringTask(new TaskRunnable(), owner, 
                                   System.currentTimeMillis() + reportPeriod,
                                   reportPeriod);
@@ -149,10 +142,9 @@ public class SnapshotTaskListener implements ProfileListener {
                     detail.retries += profileReport.getRetryCount();
 		    for (ProfileOperation op :
                               profileReport.getReportedOperations()) {
-			 Long l = null;
-			 detail.ops.put(op, ((l = detail.ops.get(op)) == null)
-					? new Long(1)
-					: l.longValue() + 1);
+			 Long l = detail.ops.get(op);
+			 detail.ops.put(
+			     op, Long.valueOf(l == null ? 1 : l + 1));
 		    }		    
                 }
             }
@@ -176,17 +168,20 @@ public class SnapshotTaskListener implements ProfileListener {
         public String toString() {
             double avgTime = (double)time / (double)count;
             double avgOps = (double)opCount / (double)count;
-            String str = " avgTime=" + df.format(avgTime) + "ms avgOps=" +
-                df.format(avgOps) + " [" + count + "/" + retries + "]";
+	    Formatter formatter = new Formatter();
+	    formatter.format(" avgTime=%2.2fms", avgTime);
+	    formatter.format(" avgOps=%2.2f", avgOps);
+	    formatter.format(" [%d/%d]", count, retries);
             if (opCount > 0)
-                str += "\n  ";
+		formatter.format("%n  ");
 	    for (ProfileOperation op : ops.keySet()) {
-		str += op + "=" +
-		    df.format(100.0 * (double)(ops.get(op).longValue()) / 
-			      (double)opCount) +
-		    "% " ;
+		formatter.format(
+		    "%s=%2.2f%% ",
+		    op,
+		    100.0 * (double)(ops.get(op).longValue()) / 
+		    (double)opCount);
 	    }		 
-            return str;
+            return formatter.toString();
         }
     }
 
@@ -198,14 +193,15 @@ public class SnapshotTaskListener implements ProfileListener {
             return TaskRunnable.class.getName();
         }
         public void run() throws Exception {
-            String reportStr = "";
+            Formatter reportStr = new Formatter();
             synchronized (map) {
                 for (Entry<String,TaskDetail> entry : map.entrySet())
-                    reportStr += entry.getKey() + entry.getValue() + "\n";
+		    reportStr.format(
+			"%s%s%n", entry.getKey(), entry.getValue());
                 map.clear();
             }
-            reportStr += "\n";
-            networkReporter.report(reportStr);
+            reportStr.format("%n");
+            networkReporter.report(reportStr.toString());
         }
     }
 
